# TruckDrive

./: .gitignore  NOTICE.txt  README.md  THIRD-PARTY-NOTICES.txt  download_truckdrive.py  download_truckdrive.sh  metainfo.json  truckdrive_incomplete_rigs.txt  truckdrive_rig_figure.py  truckdrive_val_ade_selection.json  truckdrive_val_interesting.json
dataset_viewer/: README.md  entrypoint.py  environment.yml  pyproject.toml
dataset_viewer/vis_utils/: colorize.py  dataset_details.py  load_utils.py  transforms.py
generate_training_data/: README.md  generate_mmdet_annotations.py  generate_per_scene_sensor_keys_metainfo.py  generate_per_scene_sync_info.py
mmdet_project/: README.md
mmdet_project/TruckDrive/: __init__.py
mmdet_project/TruckDrive/bevfusion/: transfusion_head.py
mmdet_project/TruckDrive/configs/: bevfusion_lidar-cam_voxel0075_second_secfpn_8xb4-cyclic-20e_truckdrive-3d.py  bevfusion_lidar-cam_voxel0075_second_secfpn_8xb4-cyclic-20e_truckdrive-3d_fullrange.py  bevfusion_lidar_voxel0075_second_secfpn_8xb4-cyclic-20e_truckdrive-3d.py  bevfusion_lidar_voxel0075_second_secfpn_8xb4-cyclic-20e_truckdrive-3d_fullrange.py
mmdet_project/TruckDrive/datasets/: truckdrive_dataset.py
mmdet_project/TruckDrive/datasets/transforms/: truckdrive_utils.py
mmdet_project/TruckDrive/metrics/: truckdrive_metric.py
mmdet_project/TruckDrive/metrics/eval_truckdrive_metric/: eval_truckdrive_constants.py  eval_truckdrive_dataclasses.py  eval_truckdrive_evaluate.py  truckdrive_metric_config_fullrange.json  truckdrive_metric_config_shortrange.json
